<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_next"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="48dp"
        android:clickable="true"
        android:enabled="false"
        android:fontFamily="sans-serif-black"
        android:minWidth="100dip"
        android:onClick="navigateToSecondView"
        android:text="@string/button_next"
        android:textSize="22sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brown"
        android:focusable="true" />

    <Button
        android:id="@+id/yellow"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/button_background_color"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/yellow"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/black"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />
    <Button
        android:id="@+id/grey"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/button_background_color"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/grey"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/brown"
        app:layout_constraintTop_toBottomOf="@+id/yellow" />
    <Button
        android:id="@+id/blue"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/button_background_color"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/blue"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/pink"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <Button
        android:id="@+id/brown"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/button_background_color"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/brown"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/grey"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/red"
        app:layout_constraintTop_toBottomOf="@+id/black" />

    <Button
        android:id="@+id/pink"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/button_background_color"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/pink"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/black"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/blue"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <Button
        android:id="@+id/green"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/button_background_color"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/green"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/red"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue" />

    <Button
        android:id="@+id/red"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/button_background_color"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/red"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/brown"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/green"
        app:layout_constraintTop_toBottomOf="@+id/pink" />

    <Button
        android:id="@+id/black"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/button_background_color"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/black"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/yellow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pink"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minWidth="400dp"
        android:minHeight="160dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="75dp"
            android:layout_marginTop="224dp"
            android:backgroundTint="@color/button_background_color"
            android:fontFamily="sans-serif"
            android:minWidth="300dp"
            android:text="@string/color_text"
            android:textAlignment="textStart"
            android:textColor="@color/button_text_color"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
